--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 
   <body>
     <div class="container">
-    <audio controls autoplay loop>
-      <source src="congratulations.mp3" type="audio/mpeg" />
-      Your browser does not support the audio element.
-    </audio>
+        <audio autoplay loop>
+        	<source src="congratulations.mp3" type="audio/mpeg">
+        </audio>
       <div class="one">
         <h1 class="one">
           Hey
