--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
   <body>
     <div class="container">
-        <audio autoplay loop>
-        	<source src="congratulations.mp3" type="audio/mpeg">
-        </audio>
+   <audio autoplay loop controls>
+    <source src="congratulations.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
       <div class="one">
         <h1 class="one">
           Hey
