--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   </head>
 
   <body>
+        <audio controls autoplay muted loop>
+        <source src="congratulations.mp3">
+        This browser does not support HTML5 audio
+    </audio>
     <div class="container">
       <div class="one">
         <h1 class="one">
