--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-        <audio controls autoplay muted loop>
+        <audio controls autoplay loop>
         <source src="congratulations.mp3">
         This browser does not support HTML5 audio
     </audio>
