--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
   </head>
 
   <body>
-        <audio controls autoplay loop>
-        <source src="congratulations.mp3">
-        This browser does not support HTML5 audio
-    </audio>
+    <audio controls autoplay loop>
+  <source src="horse.ogg" type="audio/ogg">
+  <source src="horse.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
     <div class="container">
       <div class="one">
         <h1 class="one">
