--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
   <body>
     <audio controls autoplay loop>
-  <source src="horse.ogg" type="audio/ogg">
-  <source src="horse.mp3" type="audio/mpeg">
+  <source src="congratulations.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
     <div class="container">
